[gd_scene load_steps=12 format=4 uid="uid://dmaywmcq0oyil"]

[ext_resource type="Script" uid="uid://cj0pqml055po1" path="res://Levels/ThreeLoop/SimpleMachine/simple_machine.gd" id="1_d3e5h"]
[ext_resource type="TileSet" uid="uid://c0fh2yuw37u4s" path="res://Environment/tileset.tres" id="1_h0sh1"]
[ext_resource type="PackedScene" uid="uid://binoy2bpne3jf" path="res://Objects/Door/Door.tscn" id="2_ftbll"]
[ext_resource type="PackedScene" uid="uid://dfhxr5g4l6gg" path="res://Objects/Platforms/slide_platform.tscn" id="3_gdsn5"]
[ext_resource type="PackedScene" uid="uid://ce0fyafaupkhg" path="res://Objects/Box/heavy_box.tscn" id="4_d3e5h"]
[ext_resource type="PackedScene" uid="uid://d0y011d078tou" path="res://Objects/Box/box.tscn" id="5_wyayw"]
[ext_resource type="PackedScene" uid="uid://cf2nbw1l4orcf" path="res://Player/player.tscn" id="6_tkdmk"]
[ext_resource type="PackedScene" uid="uid://bjhkesuabemhh" path="res://Objects/Button/button.tscn" id="7_gdsn5"]
[ext_resource type="PackedScene" uid="uid://bc4mudwsgjt1o" path="res://Objects/Portal/portal.tscn" id="9_wyayw"]
[ext_resource type="PackedScene" uid="uid://cc4n2fr13d1eh" path="res://Objects/DudDoor/DudDoor.tscn" id="10_kkjqo"]
[ext_resource type="TileSet" uid="uid://c3bbynk3ek2sb" path="res://Environment/hazards.tres" id="10_tkdmk"]

[node name="SimpleMachine" type="Node2D"]
script = ExtResource("1_d3e5h")

[node name="DudDoor" parent="." instance=ExtResource("10_kkjqo")]
z_index = -100
z_as_relative = false
position = Vector2(59, 272)

[node name="Door" parent="." instance=ExtResource("2_ftbll")]
position = Vector2(458, 48)

[node name="Button" parent="." instance=ExtResource("7_gdsn5")]
position = Vector2(459, 199)
rotation = -1.5708

[node name="Button2" parent="." instance=ExtResource("7_gdsn5")]
position = Vector2(171, 112)

[node name="Button3" parent="." instance=ExtResource("7_gdsn5")]
position = Vector2(439, 303)

[node name="Button4" parent="." instance=ExtResource("7_gdsn5")]
position = Vector2(100, 304)

[node name="SlidePlatform" parent="." instance=ExtResource("3_gdsn5")]
position = Vector2(369, 48)
rotation = 1.5708

[node name="Endpoint" parent="SlidePlatform" index="0"]
position = Vector2(369, -39)

[node name="SlidePlatform2" parent="." instance=ExtResource("3_gdsn5")]
position = Vector2(106, -16)
rotation = 1.5708

[node name="Endpoint" parent="SlidePlatform2" index="0"]
position = Vector2(106, 48)

[node name="SlidePlatform3" parent="." instance=ExtResource("3_gdsn5")]
position = Vector2(356, 312)
scale = Vector2(0.66, 0.66)

[node name="Endpoint" parent="SlidePlatform3" index="0"]
position = Vector2(356, 216)

[node name="SlidePlatform4" parent="." instance=ExtResource("3_gdsn5")]
position = Vector2(391, 272)
rotation = 1.5708

[node name="Endpoint" parent="SlidePlatform4" index="0"]
position = Vector2(391, 180)

[node name="Player" parent="." instance=ExtResource("6_tkdmk")]
position = Vector2(58, 301)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 575
limit_bottom = 300

[node name="HeavyBox" parent="." instance=ExtResource("4_d3e5h")]
position = Vector2(223, 72)
scale = Vector2(0.45, 0.45)

[node name="HeavyBox2" parent="." instance=ExtResource("4_d3e5h")]
position = Vector2(283, 72)
scale = Vector2(0.45, 0.45)

[node name="HeavyBox3" parent="." instance=ExtResource("4_d3e5h")]
position = Vector2(253, 72)
scale = Vector2(0.45, 0.45)

[node name="HeavyBox4" parent="." instance=ExtResource("4_d3e5h")]
position = Vector2(136, 64)
scale = Vector2(0.9, 0.9)

[node name="Box" parent="." instance=ExtResource("5_wyayw")]
position = Vector2(150, 284)

[node name="Box2" parent="." instance=ExtResource("5_wyayw")]
position = Vector2(220, 190)

[node name="Hazards" type="TileMapLayer" parent="."]
position = Vector2(-389, 0)
tile_map_data = PackedByteArray("AAAVAAMAAAAAAAAAAQAWAAMAAAAAAAAAAQA=")
tile_set = ExtResource("10_tkdmk")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-389, 0)
tile_map_data = PackedByteArray("AAAAAAAAAgABAAEAAAAAAAEAAgABAAEAAAAAAAIAAgABAAEAAAAAAAMAAgABAAEAAAAAAAQAAgABAAEAAAAAAAUAAgABAAEAAAAAAAYAAgABAAEAAAAAAAcAAgABAAEAAAAAAAgAAgABAAEAAAAAAAkAAgABAAEAAAAAAAoAAgABAAEAAAAAAAsAAgABAAEAAAAAAAwAAgABAAEAAAAAAA0AAgABAAEAAAAAAA4AAgABAAEAAAAAAA8AAgABAAEAAAAAABAAAgABAAEAAAAAABEAAgABAAEAAAAAABIAAgABAAEAAAABAAAAAgABAAEAAAACAAAAAgABAAEAAAADAAAAAgABAAEAAAAEAAAAAgABAAEAAAAFAAAAAgABAAEAAAAGAAAAAgABAAEAAAAHAAAAAgABAAEAAAAIAAAAAgABAAEAAAAJAAAAAgABAAEAAAAKAAAAAgABAAEAAAALAAAAAgABAAEAAAAMAAAAAgABAAEAAAANAAAAAgABAAEAAAAOAAAAAgABAAEAAAAPAAAAAgABAAEAAAAQAAAAAgABAAEAAAARAAAAAgABAAEAAAASAAAAAgABAAEAAAATAAAAAgABAAEAAAAUAAAAAgABAAEAAAAAABMAAgABAAEAAAAiAAAAAgABAAEAAAAjAAAAAgABAAEAAAAkAAAAAgABAAEAAAAlAAAAAgABAAEAAAAmAAAAAgABAAEAAAAnAAAAAgABAAEAAAAAABQAAgABAAEAAAAAABUAAgABAAEAAAAAABYAAgABAAEAAAABABYAAgABAAEAAAACABYAAgABAAEAAAADABYAAgABAAEAAAAEABYAAgABAAEAAAAFABYAAgABAAEAAAAGABYAAgABAAEAAAAHABYAAgABAAEAAAAIABYAAgABAAEAAAAJABYAAgABAAEAAAAKABYAAgABAAEAAAALABYAAgABAAEAAAAMABYAAgABAAEAAAANABYAAgABAAEAAAAOABYAAgABAAEAAAAPABYAAgABAAEAAAAQABYAAgABAAEAAAARABYAAgABAAEAAAASABYAAgABAAEAAAATABYAAgABAAEAAAAUABYAAgABAAEAAAAVABYAAgABAAEAAAAWABYAAgABAAEAAAAXABYAAgABAAEAAAAoAAAAAgABAAEAAAApAAAAAgAAAAMAAAAqAAAAAgABAAIAAAArAAAAAgABAAIAAAAsAAAAAgABAAIAAAAtAAAAAgABAAIAAAAuAAAAAgABAAIAAAAvAAAAAgABAAIAAAAwAAAAAgABAAIAAAAxAAAAAgABAAIAAAAyAAAAAgABAAIAAAAzAAAAAgABAAIAAAA0AAAAAgABAAIAAAA0AAYAAgABAAEAAAA0AAcAAgABAAEAAAA0AAUAAgABAAAAAAAuAAUAAgABAAAAAAAvAAUAAgABAAAAAAAwAAUAAgABAAAAAAAxAAUAAgABAAAAAAAyAAUAAgABAAAAAAAzAAUAAgABAAAAAAAqAAUAAgACAAAAAAAqAAYAAgACAAEAAAAqAAcAAgACAAEAAAAuAAYAAgABAAEAAAAuAAcAAgABAAEAAAAvAAYAAgABAAEAAAAvAAcAAgABAAEAAAAwAAYAAgABAAEAAAAwAAcAAgABAAEAAAAxAAYAAgABAAEAAAAxAAcAAgABAAEAAAAyAAYAAgABAAEAAAAyAAcAAgABAAEAAAAzAAYAAgABAAEAAAAzAAcAAgABAAEAAAAVAAAAAgABAAEAAAAWAAAAAgABAAEAAAAXAAAAAgABAAEAAAAYAAAAAgABAAEAAAAZAAAAAgABAAEAAAAaAAAAAgAAAAMAAAAbAAAAAgABAAIAAAAcAAAAAgABAAIAAAAdAAAAAgABAAIAAAAeAAAAAgABAAIAAAAfAAAAAgABAAIAAAAgAAAAAgABAAMAAAAhAAAAAgABAAEAAAAkAAUAAgAAAAAAAAAlAAUAAgABAAAAAAAmAAUAAgABAAAAAAAnAAUAAgABAAAAAAAoAAUAAgABAAAAAAApAAUAAgABAAAAAAAkAAYAAgAAAAEAAAAkAAcAAgAAAAQAAAAhAAYAAgACAAEAAAAhAAcAAgACAAMAAAAhAAUAAgACAAAAAAAiAAcAAgABAAAAAAAjAAcAAgABAAAAAAAeAAUAAgABAAAAAAAfAAUAAgABAAAAAAAgAAUAAgABAAAAAAAgAAIAAgAAAAIAAAAhAAIAAgABAAIAAAAiAAIAAgABAAIAAAAjAAIAAgABAAIAAAAkAAIAAgABAAIAAAAlAAIAAgABAAIAAAAmAAIAAgABAAIAAAAnAAIAAgABAAIAAAAoAAIAAgABAAIAAAAlAAYAAgABAAEAAAAlAAcAAgABAAEAAAAmAAYAAgABAAEAAAAmAAcAAgABAAEAAAAnAAYAAgABAAEAAAAnAAcAAgABAAEAAAAoAAYAAgABAAEAAAAoAAcAAgABAAEAAAApAAYAAgABAAEAAAApAAcAAgABAAEAAAAeAAYAAgABAAEAAAAeAAcAAgABAAEAAAAfAAYAAgABAAEAAAAfAAcAAgABAAEAAAAgAAYAAgABAAEAAAAgAAcAAgABAAEAAAAbAAUAAgABAAAAAAAcAAUAAgABAAAAAAAdAAUAAgABAAAAAAAYAAYAAgABAAEAAAAYAAcAAgABAAEAAAAYAAUAAgABAAEAAAAYAAEAAgABAAEAAAAYAAIAAgABAAEAAAAYAAMAAgABAAEAAAAYAAQAAgABAAEAAAAZAAEAAgABAAEAAAAZAAIAAgABAAEAAAAZAAMAAgABAAEAAAAZAAQAAgABAAEAAAAaAAEAAgACAAEAAAAaAAIAAgACAAEAAAAaAAMAAgACAAEAAAAaAAQAAgACAAEAAAAaAAUAAgACAAMAAAAZAAYAAgABAAEAAAAaAAYAAgABAAEAAAAbAAYAAgABAAEAAAAcAAYAAgABAAEAAAAdAAYAAgABAAEAAAAZAAUAAgABAAEAAAAtAAUAAgAAAAAAAAAtAAYAAgAAAAEAAAAtAAcAAgAAAAEAAAApAAEAAgACAAEAAAApAAIAAgACAAIAAAABAAEAAgABAAEAAAABAAIAAgABAAEAAAABAAMAAgABAAEAAAABAAQAAgABAAEAAAABAAUAAgABAAEAAAABAAYAAgABAAEAAAABAAcAAgABAAEAAAABAAgAAgABAAEAAAABAAkAAgABAAEAAAABAAoAAgABAAEAAAABAAsAAgABAAEAAAABAAwAAgABAAEAAAABAA0AAgABAAEAAAABAA4AAgABAAEAAAABAA8AAgABAAEAAAABABAAAgABAAEAAAABABEAAgABAAEAAAABABIAAgABAAEAAAABABMAAgABAAEAAAABABQAAgABAAEAAAABABUAAgABAAEAAAACAAEAAgABAAEAAAACAAIAAgABAAEAAAACAAMAAgABAAEAAAACAAQAAgABAAEAAAACAAUAAgABAAEAAAACAAYAAgABAAEAAAACAAcAAgABAAEAAAACAAgAAgABAAEAAAACAAkAAgABAAEAAAACAAoAAgABAAEAAAACAAsAAgABAAEAAAACAAwAAgABAAEAAAACAA0AAgABAAEAAAACAA4AAgABAAEAAAACAA8AAgABAAEAAAACABAAAgABAAEAAAACABEAAgABAAEAAAACABIAAgABAAEAAAACABMAAgABAAEAAAACABQAAgABAAEAAAACABUAAgABAAEAAAADAAEAAgABAAEAAAADAAIAAgABAAEAAAADAAMAAgABAAEAAAADAAQAAgABAAEAAAADAAUAAgABAAEAAAADAAYAAgABAAEAAAADAAcAAgABAAEAAAADAAgAAgABAAEAAAADAAkAAgABAAEAAAADAAoAAgABAAEAAAADAAsAAgABAAEAAAADAAwAAgABAAEAAAADAA0AAgABAAEAAAADAA4AAgABAAEAAAADAA8AAgABAAEAAAADABAAAgABAAEAAAADABEAAgABAAEAAAADABIAAgABAAEAAAADABMAAgABAAEAAAADABQAAgABAAEAAAADABUAAgABAAEAAAAEAAEAAgABAAEAAAAEAAIAAgABAAEAAAAEAAMAAgABAAEAAAAEAAQAAgABAAEAAAAEAAUAAgABAAEAAAAEAAYAAgABAAEAAAAEAAcAAgABAAEAAAAEAAgAAgABAAEAAAAEAAkAAgABAAEAAAAEAAoAAgABAAEAAAAEAAsAAgABAAEAAAAEAAwAAgABAAEAAAAEAA0AAgABAAEAAAAEAA4AAgABAAEAAAAEAA8AAgABAAEAAAAEABAAAgABAAEAAAAEABEAAgABAAEAAAAEABIAAgABAAEAAAAEABMAAgABAAEAAAAEABQAAgABAAEAAAAEABUAAgABAAEAAAAFAAEAAgABAAEAAAAFAAIAAgABAAEAAAAFAAMAAgABAAEAAAAFAAQAAgABAAEAAAAFAAUAAgABAAEAAAAFAAYAAgABAAEAAAAFAAcAAgABAAEAAAAFAAgAAgABAAEAAAAFAAkAAgABAAEAAAAFAAoAAgABAAEAAAAFAAsAAgABAAEAAAAFAAwAAgABAAEAAAAFAA0AAgABAAEAAAAFAA4AAgABAAEAAAAFAA8AAgABAAEAAAAFABAAAgABAAEAAAAFABEAAgABAAEAAAAFABIAAgABAAEAAAAFABMAAgABAAEAAAAFABQAAgABAAEAAAAFABUAAgABAAEAAAAGAAEAAgABAAEAAAAGAAIAAgABAAEAAAAGAAMAAgABAAEAAAAGAAQAAgABAAEAAAAGAAUAAgABAAEAAAAGAAYAAgABAAEAAAAGAAcAAgABAAEAAAAGAAgAAgABAAEAAAAGAAkAAgABAAEAAAAGAAoAAgABAAEAAAAGAAsAAgABAAEAAAAGAAwAAgABAAEAAAAGAA0AAgABAAEAAAAGAA4AAgABAAEAAAAGAA8AAgABAAEAAAAGABAAAgABAAEAAAAGABEAAgABAAEAAAAGABIAAgABAAEAAAAGABMAAgABAAEAAAAGABQAAgABAAEAAAAGABUAAgABAAEAAAAHAAEAAgABAAEAAAAHAAIAAgABAAEAAAAHAAMAAgABAAEAAAAHAAQAAgABAAEAAAAHAAUAAgABAAEAAAAHAAYAAgABAAEAAAAHAAcAAgABAAEAAAAHAAgAAgABAAEAAAAHAAkAAgABAAEAAAAHAAoAAgABAAEAAAAHAAsAAgABAAEAAAAHAAwAAgABAAEAAAAHAA0AAgABAAEAAAAHAA4AAgABAAEAAAAHAA8AAgABAAEAAAAHABAAAgABAAEAAAAHABEAAgABAAEAAAAHABIAAgABAAEAAAAHABMAAgABAAEAAAAHABQAAgABAAEAAAAHABUAAgABAAEAAAAIAAEAAgABAAEAAAAIAAIAAgABAAEAAAAIAAMAAgABAAEAAAAIAAQAAgABAAEAAAAIAAUAAgABAAEAAAAIAAYAAgABAAEAAAAIAAcAAgABAAEAAAAIAAgAAgABAAEAAAAIAAkAAgABAAEAAAAIAAoAAgABAAEAAAAIAAsAAgABAAEAAAAIAAwAAgABAAEAAAAIAA0AAgABAAEAAAAIAA4AAgABAAEAAAAIAA8AAgABAAEAAAAIABAAAgABAAEAAAAIABEAAgABAAEAAAAIABIAAgABAAEAAAAIABMAAgABAAEAAAAIABQAAgABAAEAAAAIABUAAgABAAEAAAAJAAEAAgABAAEAAAAJAAIAAgABAAEAAAAJAAMAAgABAAEAAAAJAAQAAgABAAEAAAAJAAUAAgABAAEAAAAJAAYAAgABAAEAAAAJAAcAAgABAAEAAAAJAAgAAgABAAEAAAAJAAkAAgABAAEAAAAJAAoAAgABAAEAAAAJAAsAAgABAAEAAAAJAAwAAgABAAEAAAAJAA0AAgABAAEAAAAJAA4AAgABAAEAAAAJAA8AAgABAAEAAAAJABAAAgABAAEAAAAJABEAAgABAAEAAAAJABIAAgABAAEAAAAJABMAAgABAAEAAAAJABQAAgABAAEAAAAJABUAAgABAAEAAAAKAAEAAgABAAEAAAAKAAIAAgABAAEAAAAKAAMAAgABAAEAAAAKAAQAAgABAAEAAAAKAAUAAgABAAEAAAAKAAYAAgABAAEAAAAKAAcAAgABAAEAAAAKAAgAAgABAAEAAAAKAAkAAgABAAEAAAAKAAoAAgABAAEAAAAKAAsAAgABAAEAAAAKAAwAAgABAAEAAAAKAA0AAgABAAEAAAAKAA4AAgABAAEAAAAKAA8AAgABAAEAAAAKABAAAgABAAEAAAAKABEAAgABAAEAAAAKABIAAgABAAEAAAAKABMAAgABAAEAAAAKABQAAgABAAEAAAAKABUAAgABAAEAAAALAAEAAgABAAEAAAALAAIAAgABAAEAAAALAAMAAgABAAEAAAALAAQAAgABAAEAAAALAAUAAgABAAEAAAALAAYAAgABAAEAAAALAAcAAgABAAEAAAALAAgAAgABAAEAAAALAAkAAgABAAEAAAALAAoAAgABAAEAAAALAAsAAgABAAEAAAALAAwAAgABAAEAAAALAA0AAgABAAEAAAALAA4AAgABAAEAAAALAA8AAgABAAEAAAALABAAAgABAAEAAAALABEAAgABAAEAAAALABIAAgABAAEAAAALABMAAgABAAEAAAALABQAAgABAAEAAAALABUAAgABAAEAAAAMAAEAAgABAAEAAAAMAAIAAgABAAEAAAAMAAMAAgABAAEAAAAMAAQAAgABAAEAAAAMAAUAAgABAAEAAAAMAAYAAgABAAEAAAAMAAcAAgABAAEAAAAMAAgAAgABAAEAAAAMAAkAAgABAAEAAAAMAAoAAgABAAEAAAAMAAsAAgABAAEAAAAMAAwAAgABAAEAAAAMAA0AAgABAAEAAAAMAA4AAgABAAEAAAAMAA8AAgABAAEAAAAMABAAAgABAAEAAAAMABEAAgABAAEAAAAMABIAAgABAAEAAAAMABMAAgABAAEAAAAMABQAAgABAAEAAAAMABUAAgABAAEAAAANAAEAAgABAAEAAAANAAIAAgABAAEAAAANAAMAAgABAAEAAAANAAQAAgABAAEAAAANAAUAAgABAAEAAAANAAYAAgABAAEAAAANAAcAAgABAAEAAAANAAgAAgABAAEAAAANAAkAAgABAAEAAAANAAoAAgABAAEAAAANAAsAAgABAAEAAAANAAwAAgABAAEAAAANAA0AAgABAAEAAAANAA4AAgABAAEAAAANAA8AAgABAAEAAAANABAAAgABAAEAAAANABEAAgABAAEAAAANABIAAgABAAEAAAANABMAAgABAAEAAAANABQAAgABAAEAAAANABUAAgABAAEAAAAOAAEAAgABAAEAAAAOAAIAAgABAAEAAAAOAAMAAgABAAEAAAAOAAQAAgABAAEAAAAOAAUAAgABAAEAAAAOAAYAAgABAAEAAAAOAAcAAgABAAEAAAAOAAgAAgABAAEAAAAOAAkAAgABAAEAAAAOAAoAAgABAAEAAAAOAAsAAgABAAEAAAAOAAwAAgABAAEAAAAOAA0AAgABAAEAAAAOAA4AAgABAAEAAAAOAA8AAgABAAEAAAAOABAAAgABAAEAAAAOABEAAgABAAEAAAAOABIAAgABAAEAAAAOABMAAgABAAEAAAAOABQAAgABAAEAAAAOABUAAgABAAEAAAAPAAEAAgABAAEAAAAPAAIAAgABAAEAAAAPAAMAAgABAAEAAAAPAAQAAgABAAEAAAAPAAUAAgABAAEAAAAPAAYAAgABAAEAAAAPAAcAAgABAAEAAAAPAAgAAgABAAEAAAAPAAkAAgABAAEAAAAPAAoAAgABAAEAAAAPAAsAAgABAAEAAAAPAAwAAgABAAEAAAAPAA0AAgABAAEAAAAPAA4AAgABAAEAAAAPAA8AAgABAAEAAAAPABAAAgABAAEAAAAPABEAAgABAAEAAAAPABIAAgABAAEAAAAPABMAAgABAAEAAAAPABQAAgABAAEAAAAPABUAAgABAAEAAAAQAAEAAgABAAEAAAAQAAIAAgABAAEAAAAQAAMAAgABAAEAAAAQAAQAAgABAAEAAAAQAAUAAgABAAEAAAAQAAYAAgABAAEAAAAQAAcAAgABAAEAAAAQAAgAAgABAAEAAAAQAAkAAgABAAEAAAAQAAoAAgABAAEAAAAQAAsAAgABAAEAAAAQAAwAAgABAAEAAAAQAA0AAgABAAEAAAAQAA4AAgABAAEAAAAQAA8AAgABAAEAAAAQABAAAgABAAEAAAAQABEAAgABAAEAAAAQABIAAgABAAEAAAAQABMAAgABAAEAAAAQABQAAgABAAEAAAAQABUAAgABAAEAAAARAAEAAgABAAEAAAARAAIAAgABAAEAAAARAAMAAgABAAEAAAARAAQAAgABAAEAAAARAAUAAgABAAEAAAARAAYAAgABAAEAAAARAAcAAgABAAEAAAARAAgAAgABAAEAAAARAAkAAgABAAEAAAARAAoAAgABAAEAAAARAAsAAgABAAEAAAARAAwAAgABAAEAAAARAA0AAgABAAEAAAARAA4AAgABAAEAAAARAA8AAgABAAEAAAARABAAAgABAAEAAAARABEAAgABAAEAAAARABIAAgABAAEAAAARABMAAgABAAEAAAARABQAAgABAAEAAAARABUAAgABAAEAAAASAAEAAgABAAEAAAASAAIAAgABAAEAAAASAAMAAgABAAEAAAASAAQAAgABAAEAAAASAAUAAgABAAEAAAASAAYAAgABAAEAAAASAAcAAgABAAEAAAASAAgAAgABAAEAAAASAAkAAgABAAEAAAASAAoAAgABAAEAAAASAAsAAgABAAEAAAASAAwAAgABAAEAAAASAA0AAgABAAEAAAASAA4AAgABAAEAAAASAA8AAgABAAEAAAASABAAAgABAAEAAAASABEAAgABAAEAAAASABIAAgABAAEAAAASABMAAgABAAEAAAASABQAAgABAAEAAAASABUAAgABAAEAAAATAAEAAgABAAEAAAATAAIAAgABAAEAAAATAAMAAgABAAEAAAATAAQAAgABAAEAAAATAAUAAgABAAEAAAATAAYAAgABAAEAAAATAAcAAgABAAEAAAATAAgAAgABAAEAAAATAAkAAgABAAEAAAATAAoAAgABAAEAAAATAAsAAgABAAEAAAATAAwAAgABAAEAAAATAA0AAgABAAEAAAATAA4AAgABAAEAAAATAA8AAgABAAEAAAATABAAAgABAAEAAAATABEAAgABAAEAAAATABIAAgABAAEAAAATABMAAgABAAEAAAATABQAAgABAAEAAAATABUAAgABAAEAAAAUAAEAAgABAAEAAAAUAAIAAgABAAEAAAAUAAMAAgABAAEAAAAUAAQAAgABAAEAAAAUAAUAAgABAAEAAAAUAAYAAgABAAEAAAAUAAcAAgABAAEAAAAUAAgAAgABAAEAAAAUAAkAAgABAAEAAAAUAAoAAgABAAEAAAAUAAsAAgABAAEAAAAUAAwAAgABAAEAAAAUAA0AAgABAAEAAAAUAA4AAgABAAEAAAAUAA8AAgABAAEAAAAUABAAAgABAAEAAAAUABEAAgABAAEAAAAUABIAAgABAAEAAAAUABMAAgABAAEAAAAUABQAAgABAAEAAAAUABUAAgABAAEAAAAVAAEAAgABAAEAAAAVAAIAAgABAAEAAAAVAAMAAgABAAEAAAAVAAQAAgABAAEAAAAVAAUAAgABAAEAAAAVAAYAAgABAAEAAAAVAAcAAgABAAEAAAAVAAgAAgABAAEAAAAVAAkAAgABAAEAAAAVAAoAAgABAAEAAAAVAAsAAgABAAEAAAAVAAwAAgABAAEAAAAVAA0AAgABAAEAAAAVAA4AAgABAAEAAAAVAA8AAgABAAEAAAAVABAAAgABAAEAAAAVABEAAgABAAEAAAAVABIAAgABAAEAAAAVABMAAgABAAEAAAAVABQAAgABAAEAAAAVABUAAgABAAEAAAAWAAEAAgABAAEAAAAWAAIAAgABAAEAAAAWAAMAAgABAAEAAAAWAAQAAgABAAEAAAAWAAUAAgABAAEAAAAWAAYAAgABAAEAAAAWAAcAAgABAAEAAAAWAAgAAgABAAEAAAAWAAkAAgABAAEAAAAWAAoAAgABAAEAAAAWAAsAAgABAAEAAAAWAAwAAgABAAEAAAAWAA0AAgABAAEAAAAWAA4AAgABAAEAAAAWAA8AAgABAAEAAAAWABAAAgABAAEAAAAWABEAAgABAAEAAAAWABIAAgABAAEAAAAWABMAAgABAAEAAAAWABQAAgABAAEAAAAWABUAAgABAAEAAAAXAAEAAgABAAEAAAAXAAIAAgABAAEAAAAXAAMAAgABAAEAAAAXAAQAAgABAAEAAAAXAAUAAgABAAEAAAAXAAYAAgABAAEAAAAXAAcAAgABAAEAAAAXAAgAAgABAAEAAAAXAAkAAgABAAEAAAAXAAoAAgABAAEAAAAXAAsAAgABAAEAAAAXAAwAAgABAAEAAAAXAA0AAgABAAEAAAAXAA4AAgABAAEAAAAXAA8AAgABAAEAAAAXABAAAgABAAEAAAAXABEAAgABAAEAAAAXABIAAgABAAEAAAAXABMAAgABAAEAAAAXABQAAgABAAEAAAAXABUAAgABAAEAAAAZAAcAAgABAAEAAAAaAAcAAgABAAEAAAAbAAcAAgABAAEAAAAcAAcAAgABAAEAAAAdAAcAAgABAAEAAAAgAAEAAgAAAAEAAAAhAAEAAgABAAEAAAAiAAEAAgABAAEAAAAjAAEAAgABAAEAAAAkAAEAAgABAAEAAAAlAAEAAgABAAEAAAAmAAEAAgABAAEAAAAnAAEAAgABAAEAAAAoAAEAAgABAAEAAAA1AAAAAgABAAIAAAA1AAUAAgABAAAAAAA1AAYAAgABAAEAAAA1AAcAAgABAAEAAAA2AAAAAgABAAIAAAA2AAUAAgABAAAAAAA2AAYAAgABAAEAAAA2AAcAAgABAAEAAAA3AAAAAgABAAIAAAA3AAUAAgABAAAAAAA3AAYAAgABAAEAAAA3AAcAAgABAAEAAAA4AAAAAgABAAIAAAA4AAUAAgABAAAAAAA4AAYAAgABAAEAAAA4AAcAAgABAAEAAAA5AAAAAgABAAIAAAA5AAUAAgABAAAAAAA5AAYAAgABAAEAAAA5AAcAAgABAAEAAAA6AAAAAgABAAEAAAA6AAEAAgAAAAEAAAA6AAIAAgAAAAEAAAA6AAMAAgAAAAEAAAA6AAQAAgAAAAEAAAA6AAUAAgABAAEAAAA6AAYAAgABAAEAAAA6AAcAAgABAAEAAAA7AAAAAgABAAEAAAA7AAEAAgABAAEAAAA7AAIAAgABAAEAAAA7AAMAAgABAAEAAAA7AAQAAgABAAEAAAA7AAUAAgABAAEAAAA7AAYAAgABAAEAAAA7AAcAAgABAAEAAAA8AAAAAgABAAEAAAA8AAEAAgABAAEAAAA8AAIAAgABAAEAAAA8AAMAAgABAAEAAAA8AAQAAgABAAEAAAA8AAUAAgABAAEAAAA8AAYAAgABAAEAAAA8AAcAAgABAAEAAAAYAAkAAgABAAEAAAAYAAoAAgABAAEAAAAYAAsAAgABAAEAAAAYAAwAAgABAAEAAAAYAA0AAgABAAEAAAAYAA4AAgAAAAMAAAAYAA8AAgACAAEAAAAYABAAAgACAAEAAAAYABEAAgACAAEAAAAYABIAAgACAAEAAAAYABMAAgACAAMAAAAYABQAAgABAAEAAAAYABUAAgABAAEAAAAYABYAAgABAAEAAAAYABcAAgABAAEAAAAZAAkAAgABAAEAAAAZAAoAAgABAAEAAAAZAAsAAgABAAEAAAAZAAwAAgABAAEAAAAZAA0AAgABAAEAAAAZAA4AAgABAAIAAAAZABMAAgABAAAAAAAZABQAAgABAAEAAAAZABUAAgABAAEAAAAZABYAAgABAAEAAAAZABcAAgABAAEAAAAaAAkAAgABAAEAAAAaAAoAAgABAAEAAAAaAAsAAgABAAEAAAAaAAwAAgABAAEAAAAaAA0AAgABAAEAAAAaAA4AAgABAAIAAAAaABMAAgABAAAAAAAaABQAAgABAAEAAAAaABUAAgABAAEAAAAaABYAAgABAAEAAAAaABcAAgABAAEAAAAbAAkAAgABAAEAAAAbAAoAAgABAAEAAAAbAAsAAgABAAEAAAAbAAwAAgABAAEAAAAbAA0AAgABAAEAAAAbAA4AAgABAAIAAAAbABMAAgABAAAAAAAbABQAAgABAAEAAAAbABUAAgABAAEAAAAbABYAAgABAAEAAAAbABcAAgABAAEAAAAcAAkAAgABAAEAAAAcAAoAAgABAAEAAAAcAAsAAgABAAEAAAAcAAwAAgABAAEAAAAcAA0AAgABAAEAAAAcAA4AAgABAAIAAAAcABMAAgABAAAAAAAcABQAAgABAAEAAAAcABUAAgABAAEAAAAcABYAAgABAAEAAAAcABcAAgABAAEAAAAdAAkAAgABAAEAAAAdAAoAAgABAAEAAAAdAAsAAgABAAEAAAAdAAwAAgABAAEAAAAdAA0AAgABAAEAAAAdAA4AAgABAAIAAAAdABMAAgABAAAAAAAdABQAAgABAAEAAAAdABUAAgABAAEAAAAdABYAAgABAAEAAAAdABcAAgABAAEAAAAeAAkAAgABAAEAAAAeAAoAAgABAAEAAAAeAAsAAgABAAEAAAAeAAwAAgABAAEAAAAeAA0AAgABAAEAAAAeAA4AAgABAAIAAAAeABMAAgABAAAAAAAeABQAAgABAAEAAAAeABUAAgABAAEAAAAeABYAAgABAAEAAAAeABcAAgABAAEAAAAfAAkAAgABAAEAAAAfAAoAAgABAAEAAAAfAAsAAgABAAEAAAAfAAwAAgABAAEAAAAfAA0AAgABAAEAAAAfAA4AAgABAAIAAAAfABMAAgABAAAAAAAfABQAAgABAAEAAAAfABUAAgABAAEAAAAfABYAAgABAAEAAAAfABcAAgABAAEAAAAgAAkAAgAAAAMAAAAgAAoAAgACAAEAAAAgAAsAAgACAAEAAAAgAAwAAgACAAEAAAAgAA0AAgACAAMAAAAgAA4AAgABAAIAAAAgABMAAgABAAAAAAAgABQAAgABAAEAAAAgABUAAgABAAEAAAAgABYAAgABAAEAAAAgABcAAgABAAEAAAAhAAkAAgABAAIAAAAhAA0AAgABAAAAAAAhAA4AAgABAAIAAAAhABMAAgABAAAAAAAhABQAAgABAAEAAAAhABUAAgABAAEAAAAhABYAAgABAAEAAAAhABcAAgABAAEAAAAiAAkAAgABAAIAAAAiAA0AAgABAAAAAAAiAA4AAgABAAIAAAAiABMAAgABAAAAAAAiABQAAgABAAEAAAAiABUAAgABAAEAAAAiABYAAgABAAEAAAAiABcAAgABAAEAAAAjAAkAAgABAAIAAAAjAA0AAgABAAAAAAAjAA4AAgABAAIAAAAjABMAAgABAAAAAAAjABQAAgABAAEAAAAjABUAAgABAAEAAAAjABYAAgABAAEAAAAjABcAAgABAAEAAAAkAAkAAgABAAIAAAAkAA0AAgABAAAAAAAkAA4AAgABAAIAAAAkABMAAgABAAAAAAAkABQAAgABAAEAAAAkABUAAgABAAEAAAAkABYAAgABAAEAAAAkABcAAgABAAEAAAAlAAkAAgABAAIAAAAlAA0AAgABAAAAAAAlAA4AAgABAAIAAAAlABMAAgABAAAAAAAlABQAAgABAAEAAAAlABUAAgABAAEAAAAlABYAAgABAAEAAAAlABcAAgABAAEAAAAmAAkAAgABAAIAAAAmAA0AAgABAAAAAAAmAA4AAgABAAIAAAAmABMAAgABAAAAAAAmABQAAgABAAEAAAAmABUAAgABAAEAAAAmABYAAgABAAEAAAAmABcAAgABAAEAAAAnAAkAAgABAAIAAAAnAA0AAgABAAAAAAAnAA4AAgABAAIAAAAnABMAAgABAAAAAAAnABQAAgABAAEAAAAnABUAAgABAAEAAAAnABYAAgABAAEAAAAnABcAAgABAAEAAAAoAAkAAgABAAIAAAAoAA0AAgABAAAAAAAoAA4AAgABAAIAAAAoABMAAgABAAAAAAAoABQAAgABAAEAAAAoABUAAgABAAEAAAAoABYAAgABAAEAAAAoABcAAgABAAEAAAApAAkAAgABAAIAAAApAA0AAgABAAAAAAApAA4AAgABAAIAAAApABMAAgABAAAAAAApABQAAgABAAEAAAApABUAAgABAAEAAAApABYAAgABAAEAAAApABcAAgABAAEAAAAqAAkAAgABAAIAAAAqAA0AAgABAAAAAAAqAA4AAgABAAIAAAAqABMAAgABAAAAAAAqABQAAgABAAEAAAAqABUAAgABAAEAAAAqABYAAgABAAEAAAAqABcAAgABAAEAAAArAAkAAgABAAIAAAArAA0AAgABAAAAAAArAA4AAgABAAIAAAArABMAAgABAAAAAAArABQAAgABAAEAAAArABUAAgABAAEAAAArABYAAgABAAEAAAArABcAAgABAAEAAAAsAAkAAgABAAIAAAAsAA0AAgACAAAAAAAsAA4AAgACAAIAAAAsABMAAgABAAAAAAAsABQAAgABAAEAAAAsABUAAgABAAEAAAAsABYAAgABAAEAAAAsABcAAgABAAEAAAAtAAkAAgABAAIAAAAtABMAAgABAAAAAAAtABQAAgABAAEAAAAtABUAAgABAAEAAAAtABYAAgABAAEAAAAtABcAAgABAAEAAAAuAAkAAgABAAIAAAAuABMAAgABAAAAAAAuABQAAgABAAEAAAAuABUAAgABAAEAAAAuABYAAgABAAEAAAAuABcAAgABAAEAAAAvAAkAAgABAAIAAAAvABMAAgABAAAAAAAvABQAAgABAAEAAAAvABUAAgABAAEAAAAvABYAAgABAAEAAAAvABcAAgABAAEAAAAwAAkAAgABAAIAAAAwAA0AAgAAAAAAAAAwAA4AAgAAAAIAAAAwABMAAgABAAAAAAAwABQAAgABAAEAAAAwABUAAgABAAEAAAAwABYAAgABAAEAAAAwABcAAgABAAEAAAAxAAkAAgABAAIAAAAxAA0AAgABAAAAAAAxAA4AAgABAAIAAAAxABMAAgABAAAAAAAxABQAAgABAAEAAAAxABUAAgABAAEAAAAxABYAAgABAAEAAAAxABcAAgABAAEAAAAyAAkAAgABAAMAAAAyAAoAAgAAAAEAAAAyAAsAAgAAAAIAAAAyAA0AAgABAAAAAAAyAA4AAgABAAIAAAAyABMAAgABAAAAAAAyABQAAgABAAEAAAAyABUAAgABAAEAAAAyABYAAgABAAEAAAAyABcAAgABAAEAAAAzAAkAAgABAAEAAAAzAAoAAgABAAEAAAAzAAsAAgABAAIAAAAzAA0AAgABAAAAAAAzAA4AAgABAAIAAAAzABMAAgABAAAAAAAzABQAAgABAAEAAAAzABUAAgABAAEAAAAzABYAAgABAAEAAAAzABcAAgABAAEAAAA0AAkAAgABAAEAAAA0AAoAAgABAAEAAAA0AAsAAgABAAIAAAA0AA0AAgABAAAAAAA0AA4AAgABAAIAAAA0ABMAAgABAAAAAAA0ABQAAgABAAEAAAA0ABUAAgABAAEAAAA0ABYAAgABAAEAAAA0ABcAAgABAAEAAAA1AAkAAgABAAEAAAA1AAoAAgABAAEAAAA1AAsAAgABAAMAAAA1AAwAAgAAAAEAAAA1AA0AAgAAAAQAAAA1AA4AAgABAAMAAAA1AA8AAgAAAAEAAAA1ABAAAgAAAAEAAAA1ABEAAgAAAAEAAAA1ABIAAgAAAAEAAAA1ABMAAgAAAAQAAAA1ABQAAgABAAEAAAA1ABUAAgABAAEAAAA2AAkAAgABAAEAAAA2AAoAAgABAAEAAAA2AAsAAgABAAEAAAA2AAwAAgABAAEAAAA2AA0AAgABAAEAAAA2AA4AAgABAAEAAAA2AA8AAgABAAEAAAA2ABAAAgABAAEAAAA2ABEAAgABAAEAAAA2ABIAAgABAAEAAAA2ABMAAgABAAEAAAA2ABQAAgABAAEAAAA2ABUAAgABAAEAAAA3AAkAAgABAAEAAAA3AAoAAgABAAEAAAA3AAsAAgABAAEAAAA3AAwAAgABAAEAAAA3AA0AAgABAAEAAAA3AA4AAgABAAEAAAA3AA8AAgABAAEAAAA3ABAAAgABAAEAAAA3ABEAAgABAAEAAAA3ABIAAgABAAEAAAA3ABMAAgABAAEAAAA3ABQAAgABAAEAAAA3ABUAAgABAAEAAAA4AAkAAgABAAEAAAA4AAoAAgABAAEAAAA4AAsAAgABAAEAAAA4AAwAAgABAAEAAAA4AA0AAgABAAEAAAA4AA4AAgABAAEAAAA4AA8AAgABAAEAAAA4ABAAAgABAAEAAAA4ABEAAgABAAEAAAA4ABIAAgABAAEAAAA4ABMAAgABAAEAAAA4ABQAAgABAAEAAAA4ABUAAgABAAEAAAA5AAkAAgABAAEAAAA5AAoAAgABAAEAAAA5AAsAAgABAAEAAAA5AAwAAgABAAEAAAA5AA0AAgABAAEAAAA5AA4AAgABAAEAAAA5AA8AAgABAAEAAAA5ABAAAgABAAEAAAA5ABEAAgABAAEAAAA5ABIAAgABAAEAAAA5ABMAAgABAAEAAAA5ABQAAgABAAEAAAA5ABUAAgABAAEAAAA6AAkAAgABAAEAAAA6AAoAAgABAAEAAAA6AAsAAgABAAEAAAA6AAwAAgABAAEAAAA6AA0AAgABAAEAAAA6AA4AAgABAAEAAAA6AA8AAgABAAEAAAA6ABAAAgABAAEAAAA6ABEAAgABAAEAAAA6ABIAAgABAAEAAAA6ABMAAgABAAEAAAA6ABQAAgABAAEAAAA6ABUAAgABAAEAAAA7AAkAAgABAAEAAAA7AAoAAgABAAEAAAA7AAsAAgABAAEAAAA7AAwAAgABAAEAAAA7AA0AAgABAAEAAAA7AA4AAgABAAEAAAA7AA8AAgABAAEAAAA7ABAAAgABAAEAAAA7ABEAAgABAAEAAAA7ABIAAgABAAEAAAA7ABMAAgABAAEAAAA7ABQAAgABAAEAAAA7ABUAAgABAAEAAAA8AAkAAgABAAEAAAA8AAoAAgABAAEAAAA8AAsAAgABAAEAAAA8AAwAAgABAAEAAAA8AA0AAgABAAEAAAA8AA4AAgABAAEAAAA8AA8AAgABAAEAAAA8ABAAAgABAAEAAAA8ABEAAgABAAEAAAA8ABIAAgABAAEAAAA8ABMAAgABAAEAAAA8ABQAAgABAAEAAAA8ABUAAgABAAEAAAAYAAgAAgABAAEAAAAZAAgAAgABAAEAAAAaAAgAAgABAAEAAAAbAAgAAgABAAEAAAAcAAgAAgABAAEAAAAdAAgAAgABAAEAAAAeAAgAAgABAAEAAAAfAAgAAgABAAEAAAAgAAgAAgABAAEAAAAhAAgAAgABAAEAAAAiAAgAAgABAAEAAAAjAAgAAgABAAEAAAAkAAgAAgABAAEAAAAlAAgAAgABAAEAAAAmAAgAAgABAAEAAAAnAAgAAgABAAEAAAAoAAgAAgABAAEAAAApAAgAAgABAAEAAAAqAAgAAgACAAMAAAArAAgAAgABAAAAAAAsAAgAAgABAAAAAAAtAAgAAgAAAAQAAAAuAAgAAgABAAEAAAAvAAgAAgABAAEAAAAwAAgAAgABAAEAAAAxAAgAAgABAAEAAAAyAAgAAgABAAEAAAAzAAgAAgABAAEAAAA0AAgAAgABAAEAAAA1AAgAAgABAAEAAAA2AAgAAgABAAEAAAA3AAgAAgABAAEAAAA4AAgAAgABAAEAAAA5AAgAAgABAAEAAAA6AAgAAgABAAEAAAA7AAgAAgABAAEAAAA8AAgAAgABAAEAAAA=")
tile_set = ExtResource("1_h0sh1")

[node name="Portal" parent="." instance=ExtResource("9_wyayw")]
position = Vector2(315, 127)
rotation = 1.5708

[node name="Portal2" parent="." instance=ExtResource("9_wyayw")]
position = Vector2(187, 238)
rotation = 1.5708

[node name="Portal3" parent="." instance=ExtResource("9_wyayw")]
position = Vector2(48, 58)
color = 2

[node name="Portal4" parent="." instance=ExtResource("9_wyayw")]
position = Vector2(24, 286)
color = 2

[connection signal="just_pressed" from="Button" to="." method="_on_button_just_pressed"]
[connection signal="just_unpressed" from="Button" to="." method="_on_button_just_unpressed"]
[connection signal="just_pressed" from="Button2" to="." method="_on_button_2_just_pressed"]
[connection signal="just_unpressed" from="Button2" to="." method="_on_button_2_just_unpressed"]
[connection signal="just_pressed" from="Button3" to="." method="_on_button_3_just_pressed"]
[connection signal="just_unpressed" from="Button3" to="." method="_on_button_3_just_unpressed"]
[connection signal="just_pressed" from="Button4" to="." method="_on_button_4_just_pressed"]
[connection signal="just_unpressed" from="Button4" to="." method="_on_button_4_just_unpressed"]
[connection signal="body_entered" from="Hazards/Laser" to="Hazards/Laser" method="_on_body_entered"]
[connection signal="body_entered" from="Hazards/@Area2D@200916" to="Hazards/@Area2D@200916" method="_on_body_entered"]

[editable path="SlidePlatform"]
[editable path="SlidePlatform2"]
[editable path="SlidePlatform3"]
[editable path="SlidePlatform4"]
